force-app/main/default/objects/NBA_Urgency_Rule__mdt/NBA_Urgency_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines urgency escalation thresholds for NBA V2 engine. Maps signal types (inactivity, stage pressure) to urgency multipliers.</description>
    <label>NBA Urgency Rule</label>
    <pluralLabel>NBA Urgency Rules</pluralLabel>
</CustomObject>