force-app/main/default/objects/NBA_Urgency_Rule__mdt/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <description>Type of urgency signal (Inactivity, Stage Pressure, SLA, Cadence Due)</description>
    <label>Signal Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>