force-app/main/default/objects/NBA_Urgency_Rule__mdt/fields/Stage_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Stage_Minimum__c</fullName>
    <description>Minimum opportunity stage for this rule to apply (e.g., Stage 4). Blank means all stages.</description>
    <label>Stage Minimum</label>
    <length>100</length>
    <type>Text</type>
</CustomField>