force-app/main/default/objects/NBA_Urgency_Rule__mdt/fields/Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Days__c</fullName>
    <description>Number of days threshold that triggers this urgency rule (e.g., 3 days inactivity)</description>
    <label>Threshold Days</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>