force-app/main/default/objects/NBA_Urgency_Rule__mdt/fields/Urgency_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Multiplier__c</fullName>
    <description>Multiplier applied to urgency score when this rule fires (e.g., 1.5x for late-stage inactivity)</description>
    <label>Urgency Multiplier</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>